fix view on mobile

--- a/client/src/pages/View.css
+++ b/client/src/pages/View.css
@@ -124,6 +124,7 @@ main.nv-pdf-area {
   align-items: center;
   box-sizing: border-box;
   background: #111;
+  overflow-x: hidden;
 }
 
 .nv-pdf-area-with-thumbnails {
@@ -156,6 +157,12 @@ main.nv-pdf-area {
   max-width: 100%;
   height: auto !important;
   overflow: hidden;
+}
+
+.nv-pdf-page .react-pdf__Page__canvas {
+  max-width: 100%;
+  height: auto !important;
+  margin: 0 auto;
 }
 
 .nv-slide-left {
